test/corpus/attributes.txt
================================================================================
Unquoted Attribute
================================================================================

<Root key=value />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value)))))

================================================================================
Single-Quoted Attribute
================================================================================

<Root key='value' />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value)))))

================================================================================
Double-Quoted Attribute
================================================================================

<Root key="value" />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value)))))

================================================================================
Expression Attribute
================================================================================

<Root key={value} />

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (attribute_value
          (expression
            (expression_value)))))))
